Connect main app and film service via HTTP